fixing navbar issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11101,4 +11101,7 @@ nav {
   margin-right: 0.5rem;
 }
 
+nav {
+  z-index: 999 !important;
+}
 /*# sourceMappingURL=style.css.map */
